y.output
   0  $accept : programa $end

   1  programa : ID bloque

   2  bloque : BEGIN ss END

   3  bloqueejecutable : BEGIN sse END

   4  ss : ss s
   5     | s

   6  s : declaracion
   7    | se

   8  sse : se
   9      | sse se

  10  se : seleccion ';'
  11     | iteracion ';'
  12     | retorno ';'
  13     | asignacion ';'
  14     | print ';'

  15  iteracion : DO bloqueejecutable WHILE '(' condicion ')'

  16  seleccion : IF '(' condicion ')' THEN bloqueejecutable END_IF
  17            | IF '(' condicion ')' THEN bloqueejecutable ELSE bloqueejecutable END_IF

  18  condicion : expresion '>' expresion
  19            | expresion '<' expresion
  20            | expresion '=' expresion
  21            | expresion MAYOR_IGUAL expresion
  22            | expresion MENOR_IGUAL expresion
  23            | expresion DISTINTO expresion

  24  parametro : tipodato ID

  25  retorno : RETURN '(' expresion ')'

  26  asignacion : ID ASSIGN expresion

  27  print : PRINT '(' CADENA ')'

  28  declaracion : tipodato FUN ID '(' parametro ')' bloque
  29              | tipodato FUN ID '(' ')' bloque
  30              | tipodato listavariables ';'

  31  tipodato : UINTEGER
  32           | LONGINT

  33  expresion : termino
  34            | expresion '+' termino
  35            | expresion '-' termino

  36  termino : factor
  37          | termino '*' factor
  38          | termino '/' factor

  39  factor : ID
  40         | UINTEGER
  41         | '-' UINTEGER
  42         | LONGINT
  43         | '-' LONGINT
  44         | invocacion

  45  listavariables : ID ',' listavariables
  46                 | ID

  47  invocacion : ID '(' ')'
  48             | ID '(' expresion ')'

state 0
	$accept : . programa $end  (0)

	ID  shift 1
	.  error

	programa  goto 2


state 1
	programa : ID . bloque  (1)

	BEGIN  shift 3
	.  error

	bloque  goto 4


state 2
	$accept : programa . $end  (0)

	$end  accept


state 3
	bloque : BEGIN . ss END  (2)

	IF  shift 5
	ID  shift 6
	PRINT  shift 7
	DO  shift 8
	RETURN  shift 9
	UINTEGER  shift 10
	LONGINT  shift 11
	.  error

	ss  goto 12
	s  goto 13
	declaracion  goto 14
	se  goto 15
	seleccion  goto 16
	iteracion  goto 17
	retorno  goto 18
	asignacion  goto 19
	print  goto 20
	tipodato  goto 21


state 4
	programa : ID bloque .  (1)

	.  reduce 1


state 5
	seleccion : IF . '(' condicion ')' THEN bloqueejecutable END_IF  (16)
	seleccion : IF . '(' condicion ')' THEN bloqueejecutable ELSE bloqueejecutable END_IF  (17)

	'('  shift 22
	.  error


state 6
	asignacion : ID . ASSIGN expresion  (26)

	ASSIGN  shift 23
	.  error


state 7
	print : PRINT . '(' CADENA ')'  (27)

	'('  shift 24
	.  error


state 8
	iteracion : DO . bloqueejecutable WHILE '(' condicion ')'  (15)

	BEGIN  shift 25
	.  error

	bloqueejecutable  goto 26


state 9
	retorno : RETURN . '(' expresion ')'  (25)

	'('  shift 27
	.  error


state 10
	tipodato : UINTEGER .  (31)

	.  reduce 31


state 11
	tipodato : LONGINT .  (32)

	.  reduce 32


state 12
	bloque : BEGIN ss . END  (2)
	ss : ss . s  (4)

	IF  shift 5
	ID  shift 6
	END  shift 28
	PRINT  shift 7
	DO  shift 8
	RETURN  shift 9
	UINTEGER  shift 10
	LONGINT  shift 11
	.  error

	s  goto 29
	declaracion  goto 14
	se  goto 15
	seleccion  goto 16
	iteracion  goto 17
	retorno  goto 18
	asignacion  goto 19
	print  goto 20
	tipodato  goto 21


state 13
	ss : s .  (5)

	.  reduce 5


state 14
	s : declaracion .  (6)

	.  reduce 6


state 15
	s : se .  (7)

	.  reduce 7


state 16
	se : seleccion . ';'  (10)

	';'  shift 30
	.  error


state 17
	se : iteracion . ';'  (11)

	';'  shift 31
	.  error


state 18
	se : retorno . ';'  (12)

	';'  shift 32
	.  error


state 19
	se : asignacion . ';'  (13)

	';'  shift 33
	.  error


state 20
	se : print . ';'  (14)

	';'  shift 34
	.  error


state 21
	declaracion : tipodato . FUN ID '(' parametro ')' bloque  (28)
	declaracion : tipodato . FUN ID '(' ')' bloque  (29)
	declaracion : tipodato . listavariables ';'  (30)

	ID  shift 35
	FUN  shift 36
	.  error

	listavariables  goto 37


state 22
	seleccion : IF '(' . condicion ')' THEN bloqueejecutable END_IF  (16)
	seleccion : IF '(' . condicion ')' THEN bloqueejecutable ELSE bloqueejecutable END_IF  (17)

	ID  shift 38
	UINTEGER  shift 39
	LONGINT  shift 40
	'-'  shift 41
	.  error

	condicion  goto 42
	expresion  goto 43
	termino  goto 44
	factor  goto 45
	invocacion  goto 46


state 23
	asignacion : ID ASSIGN . expresion  (26)

	ID  shift 38
	UINTEGER  shift 39
	LONGINT  shift 40
	'-'  shift 41
	.  error

	expresion  goto 47
	termino  goto 44
	factor  goto 45
	invocacion  goto 46


state 24
	print : PRINT '(' . CADENA ')'  (27)

	CADENA  shift 48
	.  error


state 25
	bloqueejecutable : BEGIN . sse END  (3)

	IF  shift 5
	ID  shift 6
	PRINT  shift 7
	DO  shift 8
	RETURN  shift 9
	.  error

	sse  goto 49
	se  goto 50
	seleccion  goto 16
	iteracion  goto 17
	retorno  goto 18
	asignacion  goto 19
	print  goto 20


state 26
	iteracion : DO bloqueejecutable . WHILE '(' condicion ')'  (15)

	WHILE  shift 51
	.  error


state 27
	retorno : RETURN '(' . expresion ')'  (25)

	ID  shift 38
	UINTEGER  shift 39
	LONGINT  shift 40
	'-'  shift 41
	.  error

	expresion  goto 52
	termino  goto 44
	factor  goto 45
	invocacion  goto 46


state 28
	bloque : BEGIN ss END .  (2)

	.  reduce 2


state 29
	ss : ss s .  (4)

	.  reduce 4


state 30
	se : seleccion ';' .  (10)

	.  reduce 10


state 31
	se : iteracion ';' .  (11)

	.  reduce 11


state 32
	se : retorno ';' .  (12)

	.  reduce 12


state 33
	se : asignacion ';' .  (13)

	.  reduce 13


state 34
	se : print ';' .  (14)

	.  reduce 14


state 35
	listavariables : ID . ',' listavariables  (45)
	listavariables : ID .  (46)

	','  shift 53
	';'  reduce 46


state 36
	declaracion : tipodato FUN . ID '(' parametro ')' bloque  (28)
	declaracion : tipodato FUN . ID '(' ')' bloque  (29)

	ID  shift 54
	.  error


state 37
	declaracion : tipodato listavariables . ';'  (30)

	';'  shift 55
	.  error


state 38
	factor : ID .  (39)
	invocacion : ID . '(' ')'  (47)
	invocacion : ID . '(' expresion ')'  (48)

	'('  shift 56
	MAYOR_IGUAL  reduce 39
	MENOR_IGUAL  reduce 39
	DISTINTO  reduce 39
	';'  reduce 39
	')'  reduce 39
	'>'  reduce 39
	'<'  reduce 39
	'='  reduce 39
	'+'  reduce 39
	'-'  reduce 39
	'*'  reduce 39
	'/'  reduce 39


state 39
	factor : UINTEGER .  (40)

	.  reduce 40


state 40
	factor : LONGINT .  (42)

	.  reduce 42


state 41
	factor : '-' . UINTEGER  (41)
	factor : '-' . LONGINT  (43)

	UINTEGER  shift 57
	LONGINT  shift 58
	.  error


state 42
	seleccion : IF '(' condicion . ')' THEN bloqueejecutable END_IF  (16)
	seleccion : IF '(' condicion . ')' THEN bloqueejecutable ELSE bloqueejecutable END_IF  (17)

	')'  shift 59
	.  error


state 43
	condicion : expresion . '>' expresion  (18)
	condicion : expresion . '<' expresion  (19)
	condicion : expresion . '=' expresion  (20)
	condicion : expresion . MAYOR_IGUAL expresion  (21)
	condicion : expresion . MENOR_IGUAL expresion  (22)
	condicion : expresion . DISTINTO expresion  (23)
	expresion : expresion . '+' termino  (34)
	expresion : expresion . '-' termino  (35)

	MAYOR_IGUAL  shift 60
	MENOR_IGUAL  shift 61
	DISTINTO  shift 62
	'>'  shift 63
	'<'  shift 64
	'='  shift 65
	'+'  shift 66
	'-'  shift 67
	.  error


state 44
	expresion : termino .  (33)
	termino : termino . '*' factor  (37)
	termino : termino . '/' factor  (38)

	'*'  shift 68
	'/'  shift 69
	MAYOR_IGUAL  reduce 33
	MENOR_IGUAL  reduce 33
	DISTINTO  reduce 33
	';'  reduce 33
	')'  reduce 33
	'>'  reduce 33
	'<'  reduce 33
	'='  reduce 33
	'+'  reduce 33
	'-'  reduce 33


state 45
	termino : factor .  (36)

	.  reduce 36


state 46
	factor : invocacion .  (44)

	.  reduce 44


state 47
	asignacion : ID ASSIGN expresion .  (26)
	expresion : expresion . '+' termino  (34)
	expresion : expresion . '-' termino  (35)

	'+'  shift 66
	'-'  shift 67
	';'  reduce 26


state 48
	print : PRINT '(' CADENA . ')'  (27)

	')'  shift 70
	.  error


state 49
	bloqueejecutable : BEGIN sse . END  (3)
	sse : sse . se  (9)

	IF  shift 5
	ID  shift 6
	END  shift 71
	PRINT  shift 7
	DO  shift 8
	RETURN  shift 9
	.  error

	se  goto 72
	seleccion  goto 16
	iteracion  goto 17
	retorno  goto 18
	asignacion  goto 19
	print  goto 20


state 50
	sse : se .  (8)

	.  reduce 8


state 51
	iteracion : DO bloqueejecutable WHILE . '(' condicion ')'  (15)

	'('  shift 73
	.  error


state 52
	retorno : RETURN '(' expresion . ')'  (25)
	expresion : expresion . '+' termino  (34)
	expresion : expresion . '-' termino  (35)

	')'  shift 74
	'+'  shift 66
	'-'  shift 67
	.  error


state 53
	listavariables : ID ',' . listavariables  (45)

	ID  shift 35
	.  error

	listavariables  goto 75


state 54
	declaracion : tipodato FUN ID . '(' parametro ')' bloque  (28)
	declaracion : tipodato FUN ID . '(' ')' bloque  (29)

	'('  shift 76
	.  error


state 55
	declaracion : tipodato listavariables ';' .  (30)

	.  reduce 30


state 56
	invocacion : ID '(' . ')'  (47)
	invocacion : ID '(' . expresion ')'  (48)

	ID  shift 38
	UINTEGER  shift 39
	LONGINT  shift 40
	')'  shift 77
	'-'  shift 41
	.  error

	expresion  goto 78
	termino  goto 44
	factor  goto 45
	invocacion  goto 46


state 57
	factor : '-' UINTEGER .  (41)

	.  reduce 41


state 58
	factor : '-' LONGINT .  (43)

	.  reduce 43


state 59
	seleccion : IF '(' condicion ')' . THEN bloqueejecutable END_IF  (16)
	seleccion : IF '(' condicion ')' . THEN bloqueejecutable ELSE bloqueejecutable END_IF  (17)

	THEN  shift 79
	.  error


state 60
	condicion : expresion MAYOR_IGUAL . expresion  (21)

	ID  shift 38
	UINTEGER  shift 39
	LONGINT  shift 40
	'-'  shift 41
	.  error

	expresion  goto 80
	termino  goto 44
	factor  goto 45
	invocacion  goto 46


state 61
	condicion : expresion MENOR_IGUAL . expresion  (22)

	ID  shift 38
	UINTEGER  shift 39
	LONGINT  shift 40
	'-'  shift 41
	.  error

	expresion  goto 81
	termino  goto 44
	factor  goto 45
	invocacion  goto 46


state 62
	condicion : expresion DISTINTO . expresion  (23)

	ID  shift 38
	UINTEGER  shift 39
	LONGINT  shift 40
	'-'  shift 41
	.  error

	expresion  goto 82
	termino  goto 44
	factor  goto 45
	invocacion  goto 46


state 63
	condicion : expresion '>' . expresion  (18)

	ID  shift 38
	UINTEGER  shift 39
	LONGINT  shift 40
	'-'  shift 41
	.  error

	expresion  goto 83
	termino  goto 44
	factor  goto 45
	invocacion  goto 46


state 64
	condicion : expresion '<' . expresion  (19)

	ID  shift 38
	UINTEGER  shift 39
	LONGINT  shift 40
	'-'  shift 41
	.  error

	expresion  goto 84
	termino  goto 44
	factor  goto 45
	invocacion  goto 46


state 65
	condicion : expresion '=' . expresion  (20)

	ID  shift 38
	UINTEGER  shift 39
	LONGINT  shift 40
	'-'  shift 41
	.  error

	expresion  goto 85
	termino  goto 44
	factor  goto 45
	invocacion  goto 46


state 66
	expresion : expresion '+' . termino  (34)

	ID  shift 38
	UINTEGER  shift 39
	LONGINT  shift 40
	'-'  shift 41
	.  error

	termino  goto 86
	factor  goto 45
	invocacion  goto 46


state 67
	expresion : expresion '-' . termino  (35)

	ID  shift 38
	UINTEGER  shift 39
	LONGINT  shift 40
	'-'  shift 41
	.  error

	termino  goto 87
	factor  goto 45
	invocacion  goto 46


state 68
	termino : termino '*' . factor  (37)

	ID  shift 38
	UINTEGER  shift 39
	LONGINT  shift 40
	'-'  shift 41
	.  error

	factor  goto 88
	invocacion  goto 46


state 69
	termino : termino '/' . factor  (38)

	ID  shift 38
	UINTEGER  shift 39
	LONGINT  shift 40
	'-'  shift 41
	.  error

	factor  goto 89
	invocacion  goto 46


state 70
	print : PRINT '(' CADENA ')' .  (27)

	.  reduce 27


state 71
	bloqueejecutable : BEGIN sse END .  (3)

	.  reduce 3


state 72
	sse : sse se .  (9)

	.  reduce 9


state 73
	iteracion : DO bloqueejecutable WHILE '(' . condicion ')'  (15)

	ID  shift 38
	UINTEGER  shift 39
	LONGINT  shift 40
	'-'  shift 41
	.  error

	condicion  goto 90
	expresion  goto 43
	termino  goto 44
	factor  goto 45
	invocacion  goto 46


state 74
	retorno : RETURN '(' expresion ')' .  (25)

	.  reduce 25


state 75
	listavariables : ID ',' listavariables .  (45)

	.  reduce 45


state 76
	declaracion : tipodato FUN ID '(' . parametro ')' bloque  (28)
	declaracion : tipodato FUN ID '(' . ')' bloque  (29)

	UINTEGER  shift 10
	LONGINT  shift 11
	')'  shift 91
	.  error

	parametro  goto 92
	tipodato  goto 93


state 77
	invocacion : ID '(' ')' .  (47)

	.  reduce 47


state 78
	expresion : expresion . '+' termino  (34)
	expresion : expresion . '-' termino  (35)
	invocacion : ID '(' expresion . ')'  (48)

	')'  shift 94
	'+'  shift 66
	'-'  shift 67
	.  error


state 79
	seleccion : IF '(' condicion ')' THEN . bloqueejecutable END_IF  (16)
	seleccion : IF '(' condicion ')' THEN . bloqueejecutable ELSE bloqueejecutable END_IF  (17)

	BEGIN  shift 25
	.  error

	bloqueejecutable  goto 95


state 80
	condicion : expresion MAYOR_IGUAL expresion .  (21)
	expresion : expresion . '+' termino  (34)
	expresion : expresion . '-' termino  (35)

	'+'  shift 66
	'-'  shift 67
	')'  reduce 21


state 81
	condicion : expresion MENOR_IGUAL expresion .  (22)
	expresion : expresion . '+' termino  (34)
	expresion : expresion . '-' termino  (35)

	'+'  shift 66
	'-'  shift 67
	')'  reduce 22


state 82
	condicion : expresion DISTINTO expresion .  (23)
	expresion : expresion . '+' termino  (34)
	expresion : expresion . '-' termino  (35)

	'+'  shift 66
	'-'  shift 67
	')'  reduce 23


state 83
	condicion : expresion '>' expresion .  (18)
	expresion : expresion . '+' termino  (34)
	expresion : expresion . '-' termino  (35)

	'+'  shift 66
	'-'  shift 67
	')'  reduce 18


state 84
	condicion : expresion '<' expresion .  (19)
	expresion : expresion . '+' termino  (34)
	expresion : expresion . '-' termino  (35)

	'+'  shift 66
	'-'  shift 67
	')'  reduce 19


state 85
	condicion : expresion '=' expresion .  (20)
	expresion : expresion . '+' termino  (34)
	expresion : expresion . '-' termino  (35)

	'+'  shift 66
	'-'  shift 67
	')'  reduce 20


state 86
	expresion : expresion '+' termino .  (34)
	termino : termino . '*' factor  (37)
	termino : termino . '/' factor  (38)

	'*'  shift 68
	'/'  shift 69
	MAYOR_IGUAL  reduce 34
	MENOR_IGUAL  reduce 34
	DISTINTO  reduce 34
	';'  reduce 34
	')'  reduce 34
	'>'  reduce 34
	'<'  reduce 34
	'='  reduce 34
	'+'  reduce 34
	'-'  reduce 34


state 87
	expresion : expresion '-' termino .  (35)
	termino : termino . '*' factor  (37)
	termino : termino . '/' factor  (38)

	'*'  shift 68
	'/'  shift 69
	MAYOR_IGUAL  reduce 35
	MENOR_IGUAL  reduce 35
	DISTINTO  reduce 35
	';'  reduce 35
	')'  reduce 35
	'>'  reduce 35
	'<'  reduce 35
	'='  reduce 35
	'+'  reduce 35
	'-'  reduce 35


state 88
	termino : termino '*' factor .  (37)

	.  reduce 37


state 89
	termino : termino '/' factor .  (38)

	.  reduce 38


state 90
	iteracion : DO bloqueejecutable WHILE '(' condicion . ')'  (15)

	')'  shift 96
	.  error


state 91
	declaracion : tipodato FUN ID '(' ')' . bloque  (29)

	BEGIN  shift 3
	.  error

	bloque  goto 97


state 92
	declaracion : tipodato FUN ID '(' parametro . ')' bloque  (28)

	')'  shift 98
	.  error


state 93
	parametro : tipodato . ID  (24)

	ID  shift 99
	.  error


state 94
	invocacion : ID '(' expresion ')' .  (48)

	.  reduce 48


state 95
	seleccion : IF '(' condicion ')' THEN bloqueejecutable . END_IF  (16)
	seleccion : IF '(' condicion ')' THEN bloqueejecutable . ELSE bloqueejecutable END_IF  (17)

	ELSE  shift 100
	END_IF  shift 101
	.  error


state 96
	iteracion : DO bloqueejecutable WHILE '(' condicion ')' .  (15)

	.  reduce 15


state 97
	declaracion : tipodato FUN ID '(' ')' bloque .  (29)

	.  reduce 29


state 98
	declaracion : tipodato FUN ID '(' parametro ')' . bloque  (28)

	BEGIN  shift 3
	.  error

	bloque  goto 102


state 99
	parametro : tipodato ID .  (24)

	.  reduce 24


state 100
	seleccion : IF '(' condicion ')' THEN bloqueejecutable ELSE . bloqueejecutable END_IF  (17)

	BEGIN  shift 25
	.  error

	bloqueejecutable  goto 103


state 101
	seleccion : IF '(' condicion ')' THEN bloqueejecutable END_IF .  (16)

	.  reduce 16


state 102
	declaracion : tipodato FUN ID '(' parametro ')' bloque .  (28)

	.  reduce 28


state 103
	seleccion : IF '(' condicion ')' THEN bloqueejecutable ELSE bloqueejecutable . END_IF  (17)

	END_IF  shift 104
	.  error


state 104
	seleccion : IF '(' condicion ')' THEN bloqueejecutable ELSE bloqueejecutable END_IF .  (17)

	.  reduce 17


33 terminals, 22 nonterminals
49 grammar rules, 105 states
